[tool.poetry]
name = "project2-karbovskiy-denis"
version = "0.1.0"
description = ""
authors = ["Denis39rus <carbovskydenis@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"